Implement file service MVP
